name:              narwhal
version:           0.0.0
cabal-version:     >= 1.8
synopsis:          nrwhl.org
build-type:        Simple
license:           BSD2

Flag dev
  Description: Turn on development settings, like auto-reload templates.
  Default:     False

Flag library-only
  Description: Build for use with "yesod devel"
  Default:     False

library
  hs-source-dirs:  src
  exposed-modules: Application
                   Foundation
                   Handler.About
                   Handler.Admin
                   Handler.Admin.Teams
                   Handler.Draft
                   Handler.Error
                   Handler.FindPlayers
                   Handler.Home
                   Handler.ListTeams
                   Handler.Mail
                   Handler.Messages.Common
                   Handler.Messages.Inbox
                   Handler.Messages.New
                   Handler.Messages.Outbox
                   Handler.Profile
                   Handler.Register
                   Handler.Release
                   Handler.Team
                   Handler.Team.Roster
                   Handler.Verify
                   Helpers
                   Helpers.Impersonate
                   Import
                   Model
                   Model.Auth
                   Model.Instances
                   Model.Instances.Debug
                   Model.Message
                   Model.PlayerStats
                   Model.Season
                   Model.Setup
                   Model.Setup.Development
                   Model.SqlFunctions
                   Model.Team
                   Model.User
                   Paths_narwhal
                   Services.DraftChat
                   Services.Resize
                   Services.Upload
                   Settings
                   Settings.Development
                   Settings.StaticFiles
                   Types.Draft
                   Types.Draft.MessageType
                   Types.MessageHash
                   Types.Messages
                   Types.Permissions
                   Types.Position
                   Types.S3
                   Types.Time
                   Types.User
                   Yesod.Text.Markdown

  if flag(dev) || flag(library-only)
    cpp-options: -DDEVELOPMENT
    ghc-options: -Wall -O0 -fwarn-tabs -fwarn-incomplete-uni-patterns
                 -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
                 -fwarn-auto-orphans -fwarn-implicit-prelude
  else
    ghc-options: -Wall

  extensions: CPP
              EmptyDataDecls
              FlexibleContexts
              GADTs
              MultiParamTypeClasses
              NoImplicitPrelude
              OverloadedStrings
              QuasiQuotes
              RankNTypes
              TemplateHaskell
              TypeFamilies

  build-depends: base == 4.*
               , MonadRandom
               , SHA
               , aeson
               , airbrake
               , aws
               , blaze-markup
               , blaze-html
               , bytestring
               , conduit
               , conduit-combinators
               , conduit-extra
               , containers
               , data-default
               , directory
               , email-validate
               , esqueleto
               , exceptions
               , fast-logger
               , hjsmin
               , http-client
               , http-conduit
               , http-types
               , imagemagick
               , lens
               , lifted-base
               , markdown
               , mime-mail
               , mime-types
               , monad-control
               , monad-logger
               , mtl
               , network-uri
               , old-locale
               , path-pieces
               , persistent
               , persistent-postgresql
               , persistent-template
               , process-extras
               , pwstore-fast
               , random
               , resourcet
               , shakespeare
               , stm-lifted
               , system-filepath
               , template-haskell
               , text
               , text-normal
               , thyme
               , transformers
               , unordered-containers
               , utf8-string
               , vault
               , vector-space
               , wai
               , wai-extra
               , wai-logger
               , yaml
               , yesod
               , yesod-auth
               , yesod-core
               , yesod-form
               , yesod-pagination
               , yesod-static
               , yesod-websockets

executable narwhal
  if flag(library-only)
    Buildable: False

  main-is:        main.hs
  hs-source-dirs: app
  ghc-options:    -O -threaded -with-rtsopts=-N

  build-depends: base
               , narwhal
               , yesod


test-suite hlint
  type:           exitcode-stdio-1.0
  main-is:        hlint.hs
  hs-source-dirs: tests
  ghc-options:    -Wall -Werror

  build-depends: base, hlint

test-suite integration
  type:              exitcode-stdio-1.0
  main-is:           main.hs
  hs-source-dirs:    tests
  ghc-options:       -Wall -Werror

  build-depends: base
               , narwhal
               , aeson
               , data-default
               , hspec
               , http-types
               , HUnit
               , lifted-base
               , markdown
               , monad-control
               , monad-logger
               , MonadRandom
               , mtl
               , persistent
               , persistent-postgresql
               , pwstore-fast
               , random
               , resourcet
               , text
               , text-normal
               , thyme
               , transformers
               , xml-conduit
               , yesod
               , yesod-auth
               , yesod-core
               , yesod-test
